[package]
name = "strux-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "strux_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"
rayon = "1.10.0"
nalgebra = { version = "0.33.0", default-features = false, features = ["std"] }
